feat: own style, about me

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 base_url = "https:aendu.rocks"
-title = "Aendu on the rocks"
+title = "Aendu rocks"
 description = "Aendu rocks is a blog by André Wittwer about traveling, photography, music, cooking and mixing cocktails."
 author = "André Wittwer"
 theme = "tabi"
@@ -34,6 +34,8 @@ bottom_footnotes = true
 # To use a Zola built-in theme, CSP needs to allow unsafe-inline for style-src.
 highlight_theme = "css"
 smart_punctuation = true
+external_links_target_blank = true
+external_links_class = "external"
 
 
 [extra]
@@ -53,11 +55,11 @@ override_serif_with_sans = false
 
 # Enable JavaScript theme toggler to allow users to switch between dark/light mode.
 # If disabled, your site will use the theme specified in the `default_theme` variable.
-theme_switcher = true
+theme_switcher = false
 
 # This setting determines the default theme on load ("light" or "dark").
 # To follow the user's OS theme, leave it empty or unset.
-default_theme = ""
+default_theme = "dark"
 
 # Choose the colourscheme (skin) for the theme. Default is "teal".
 # Skin available: blue, lavender, mint, red, sakura, teal, monochrome, lowcontrast_orange, lowcontrast_peach, lowcontrast_pink, indigo_ingot, evangelion
@@ -66,7 +68,7 @@ default_theme = ""
 # contrast (in light theme) for readability and might not be suitable for all users.
 # Furthermore, low contrasting elements will affect your Google Lighthouse rating.
 # All other skins have optimal contrast.
-skin = "evangelion"
+skin = "aendu"
 
 # Set browser theme colour. Can be a single colour or [light, dark].
 # Note: Bright colors may be ignored in dark mode.
@@ -120,7 +122,7 @@ show_author = true
 
 # Show the reading time of a page.
 # Can be set at page or section levels, following the hierarchy: page > section > config. See: https://welpo.github.io/tabi/blog/mastering-tabi-settings/#settings-hierarchy
-show_reading_time = true
+show_reading_time = false
 
 # Show the date of a page below its title.
 # Can be set at page or section levels, following the hierarchy: page > section > config. See: https://welpo.github.io/tabi/blog/mastering-tabi-settings/#settings-hierarchy
@@ -164,7 +166,7 @@ serve_local_mermaid = true
 
 # Show links to previous and next articles at the bottom of posts.
 # Can be set at page or section levels, following the hierarchy: page > section > config. See: https://welpo.github.io/tabi/blog/mastering-tabi-settings/#settings-hierarchy
-show_previous_next_article_links = false
+show_previous_next_article_links = true
 
 # Invert order of the links to previous and next articles at the bottom of posts.
 # By default, next articles are on the left side of the page and previous articles are on the right side.
@@ -217,7 +219,7 @@ enable_cards_tag_filtering = true
 invert_title_order = false
 
 # Full path after the base URL required. So if you were to place it in "static" it would be "/favicon.ico"
-# favicon = ""
+favicon = "img/aendu-avatar-favicon.ico"
 
 # Add an emoji here to use it as favicon.
 # Compatibility: https://caniuse.com/link-icon-svg
@@ -230,9 +232,10 @@ invert_title_order = false
 # social_media_card = ""
 
 menu = [
-    { name = "blog", url = "blog", trailing_slash = true },
-    { name = "tags", url = "tags", trailing_slash = true },
-    { name = "projects", url = "projects", trailing_slash = true },
+    { name = "Who I am", url = "about", trailing_slash = true },
+    { name = "Blog", url = "blog", trailing_slash = true },
+    { name = "Gallery", url = "https://gallery.aendu.rocks", trailing_slash = false, external = true },
+    { name = "Tags", url = "tags", trailing_slash = true },
 ]
 
 # The RSS icon will be shown if (1) it's enabled and (2) the following variable is set to true.
@@ -254,13 +257,13 @@ encode_plaintext_email = true  # Setting is ignored if email is already encoded.
 # Social media links for the footer.
 # Built-in icons: https://github.com/welpo/tabi/tree/main/static/social_icons
 # To use a custom icon, add it to your site's `static/social_icons` directory.
-# socials = [
-#     { name = "github", url = "https://github.com/welpo/", icon = "github" },
-#     { name = "soundcloud", url = "https://soundcloud.com/oskerwyld", icon = "soundcloud" },
-#     { name = "instagram", url = "https://instagram.com/oskerwyld", icon = "instagram" },
-#     { name = "youtube", url = "https://youtube.com/@oskerwyld", icon = "youtube" },
-#     { name = "spotify", url = "https://open.spotify.com/artist/5Hv2bYBhMp1lUHFri06xkE", icon = "spotify" },
-# ]
+socials = [
+    { name = "email", url = "mailto:andre.wittwer@gmail.com", icon = "email" },
+    { name = "github", url = "https://github.com/rockinguitar", icon = "github" },
+    { name = "bluesky", url = "https://bsky.app/profile/aendu.rocks", icon = "bluesky" },
+    { name = "instagram", url = "https://instagram.com/rockinguitar", icon = "instagram" },
+    { name = "youtube", url = "https://www.youtube.com/@rockinguitar.66 ", icon = "youtube" },
+]
 
 # Fediverse profile.
 # Adds metadata to feature the author's profile in Mastodon link previews.
