--- a/config.toml
+++ b/config.toml
@@ -86,12 +86,12 @@ stylesheets = []
 # Individual pages can override this in the [extra] section using canonical_url.
 # Example: "$base_url/blog/post1" will get the canonical URL "https://example.com/blog/post1".
 # Note: To ensure accuracy in terms of matching content, consider setting 'canonical_url' individually per page.
-# base_canonical_url = "https://example.com"
+base_canonical_url = "https://aendu.rocks"
 
 # Remote repository for your Zola site.
 # Used for `show_remote_changes` and `show_remote_source` (see below).
 # Supports GitHub, GitLab, Gitea, and Codeberg.
-# remote_repository_url = "https://github.com/welpo/tabi"
+remote_repository_url = "https://github.com/rockinguitar/aendu-rocks"
 # Set this to "auto" to try and auto-detect the platform based on the repository URL.
 # Accepted values are "github", "gitlab", "gitea", and "codeberg".
 remote_repository_git_platform = "auto"  # Defaults to "auto".
@@ -118,7 +118,7 @@ force_codeblock_ltr = true
 
 # Show the author(s) of a page.
 # Can be set at page or section levels, following the hierarchy: page > section > config. See: https://welpo.github.io/tabi/blog/mastering-tabi-settings/#settings-hierarchy
-show_author = true
+show_author = false
 
 # Show the reading time of a page.
 # Can be set at page or section levels, following the hierarchy: page > section > config. See: https://welpo.github.io/tabi/blog/mastering-tabi-settings/#settings-hierarchy
@@ -189,14 +189,13 @@ quick_navigation_buttons = true
 
 # Date format used when listing posts (main page, /blog section, tag posts list…)
 # Default is "6th July 2049" in English and "%d %B %Y" in other languages.
-# long_date_format = "%d %B %Y"
+long_date_format = "%A, %d %B %Y"
 
 # Date format used for blog posts.
 # Default is "6th July 2049" in English and "%-d %B %Y" in other languages.
-short_date_format = ""
-
+short_date_format = "%d.%m.%Y"
 # Custom separator used in title tag and posts metadata (between date, time to read, and tags).
-separator = "•"
+separator = "✧"
 
 # Use a shorter layout for All tags listing.
 # Default: tag_name – n post[s]
