--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https:aendu.rocks"
+base_url = "https://aendu.rocks"
 title = "Aendu rocks"
 description = "Aendu rocks is a blog by André Wittwer about traveling, photography, music, cooking and mixing cocktails."
 author = "André Wittwer"
