--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://aendu.rocks"
+base_url = "https://aendu-rocks.pages.dev/"
 title = "Aendu rocks"
 description = "Aendu rocks is a blog by André Wittwer about traveling, photography, music, cooking and mixing cocktails."
 author = "André Wittwer"
@@ -86,7 +86,7 @@ stylesheets = []
 # Individual pages can override this in the [extra] section using canonical_url.
 # Example: "$base_url/blog/post1" will get the canonical URL "https://example.com/blog/post1".
 # Note: To ensure accuracy in terms of matching content, consider setting 'canonical_url' individually per page.
-base_canonical_url = "https://aendu.rocks"
+base_canonical_url = "https://aendu-rocks.pages.dev/"
 
 # Remote repository for your Zola site.
 # Used for `show_remote_changes` and `show_remote_source` (see below).
