feat: add h-card info

--- a/config.toml
+++ b/config.toml
@@ -458,3 +458,12 @@ domain = ""
 # p_nickname = "nickname"
 # p_locality = "Bordeaux"
 # p_country_name = "France"
+enable = true
+with_mail = true
+with_social_links = true
+avatar = "img/aendu-avatar.webp"
+full_name = "André Wittwer"
+biography = "Software Developer, photographer, home cook & rock fan — based in Oslo"
+p_nickname = "Aendu"
+p_locality = "Oslo"
+p_country_name = "Norway"
