--- a/config.toml
+++ b/config.toml
@@ -249,15 +249,15 @@ full_content_in_feed = true
 # Protect against spambots:
 # 1. Use base64 for email (convert at https://www.base64encode.org/ or `printf 'your@email.com' | base64`).
 # 2. Or, set 'encode_plaintext_email' to true for auto-encoding (only protects on site, not in public repos).
-# email = "bWFpbEBleGFtcGxlLmNvbQ=="  # base64 encoded version of "mail@example.com"
+email = "YW5kcmUud2l0dHdlckBnbWFpbC5jb20="  # base64 encoded version of "mail@example.com"
 # Decoding requires ~400 bytes of JavaScript. If JS is disabled, the email won't be displayed.
-encode_plaintext_email = true  # Setting is ignored if email is already encoded.
+encode_plaintext_email = false  # Setting is ignored if email is already encoded.
 
 # Social media links for the footer.
 # Built-in icons: https://github.com/welpo/tabi/tree/main/static/social_icons
 # To use a custom icon, add it to your site's `static/social_icons` directory.
 socials = [
-    { name = "email", url = "mailto:andre.wittwer@gmail.com", icon = "email" },
+    { name = "email", icon = "email" },
     { name = "github", url = "https://github.com/rockinguitar", icon = "github" },
     { name = "bluesky", url = "https://bsky.app/profile/aendu.rocks", icon = "bluesky" },
     { name = "instagram", url = "https://instagram.com/rockinguitar", icon = "instagram" },
